--- a/ihmc-communication/build.gradle
+++ b/ihmc-communication/build.gradle
@@ -21,6 +21,7 @@ mainDependencies {
    api("org.apache.commons:commons-lang3:3.8.1")
    api("com.google.guava:guava:18.0")
    api("org.reflections:reflections:0.9.10")
+   api("commons-net:commons-net:3.6")
 
    api("us.ihmc:euclid:0.12.1")
    api("us.ihmc:ihmc-commons:0.26.6")
