--- a/robot-environment-awareness/src/application/OD.conf
+++ b/robot-environment-awareness/src/application/OD.conf
@@ -11,10 +11,8 @@ IDEAL_ANGLE_BETWEEN_CAMERA_AND_PLANE
 90.0
 MIN_X_EXPECTED_X_DIFFERENCE_TOLERANCE
 0.05
-DISTANCE_CAMERA_FOOT
+DISTANCE_CAMERA_GROUND
 0.635
-DISTANCE_FOOT_GROUND
-0.38
 
 PLANAR_REGIONS_SEGMENTATION_PARAMETERS
 search radius: 0.05, max distance from plane: 0.05, maxAngleFromPlane: 0.17453292519943295, minNormalQuality: 0.005, min region size: 50, max standard deviation: 0.015, min volumic density: 100000.0
@@ -37,7 +35,7 @@ MAXY
 MINY
 -0.1
 MAXZ
-1.5
+2.5
 MINZ
 0.0
 
