integration of data from Exo

--- a/robot-environment-awareness/src/application/OD.conf
+++ b/robot-environment-awareness/src/application/OD.conf
@@ -1,18 +1,22 @@
 ALGORITHM_SELECTOR
 stairDistance2
-ANGLE_TO_CAMERA_TOLERANCE
-20.0
+CAMERA_POSITION
+2
+ANGLE_CAMERA_PLANE_TOLERANCE
+10.0
+MIN_X_EXPECTED_X_DIFFERENCE_TOLERANCE
+0.05
+DEFAULT_DISTANCE_CAMERA_GROUND
+0.635
+DEFAULT_THIGH_ANGLE
+90.0
+DEFAULT_IDEAL_ANGLE_BETWEEN_CAMERA_AND_PLANE
+90.0
+
 ANGLE_BETWEEN_PLANES_TOLERANCE
 10.0
 XYZ_TOLERANCE
 0.1
-
-IDEAL_ANGLE_BETWEEN_CAMERA_AND_PLANE
-90.0
-MIN_X_EXPECTED_X_DIFFERENCE_TOLERANCE
-0.05
-DISTANCE_CAMERA_GROUND
-0.635
 
 PLANAR_REGIONS_SEGMENTATION_PARAMETERS
 search radius: 0.05, max distance from plane: 0.05, maxAngleFromPlane: 0.17453292519943295, minNormalQuality: 0.005, min region size: 50, max standard deviation: 0.015, min volumic density: 100000.0
@@ -39,7 +43,7 @@ MAXZ
 MINZ
 0.0
 
-MAX_POINTS
+MAX_NUMBER_OF_POINTS
 20000
 BUFFER_THREAD_PERIOD_MILLISECONDS
 10
