new paramets + new values from measurements

--- a/robot-environment-awareness/src/application/OD.conf
+++ b/robot-environment-awareness/src/application/OD.conf
@@ -12,6 +12,8 @@ DEFAULT_THIGH_ANGLE
 90.0
 DEFAULT_IDEAL_ANGLE_BETWEEN_CAMERA_AND_PLANE
 90.0
+DEFAULT_IDEAL_ANGLE_BETWEEN_GROUND_AND_PLANE
+0.0
 
 ANGLE_BETWEEN_PLANES_TOLERANCE
 10.0
