Exo and camera data synchronization

--- a/robot-environment-awareness/src/application/OD.conf
+++ b/robot-environment-awareness/src/application/OD.conf
@@ -1,7 +1,7 @@
 ALGORITHM_SELECTOR
-stairDistance2
+stairDistance3
 CAMERA_POSITION
-2
+1
 ANGLE_CAMERA_PLANE_TOLERANCE
 10.0
 MIN_X_EXPECTED_X_DIFFERENCE_TOLERANCE
@@ -25,9 +25,15 @@ search radius: 0.05, max distance from plane: 0.05, maxAngleFromPlane: 0.1745329
 DEFAULT_OCTREE_RESOLUTION
 0.02
 
+CYCKE_COUNTER_THRESHOLD
+100
 TIME_BEFORE_NO_DISTANCE_REPORT
 2000
+COPY_ON_WRITE_ARRAYS
+true
 PRINT_SENDER
+false
+PRINT_FINDER
 false
 DISTANCE_IN_FEET
 false
@@ -49,11 +55,5 @@ MAXZ
 MINZ
 0.0
 
-EXO_DATA_MINIMUM_TIME_GAP
-10
 MAX_NUMBER_OF_POINTS
-20000
-BUFFER_THREAD_PERIOD_MILLISECONDS
-10
-THREAD_PERIOD_MILLISECONDS
-200
+300000
