--- a/ihmc-model-file-loader/build.gradle
+++ b/ihmc-model-file-loader/build.gradle
@@ -23,7 +23,9 @@ mainDependencies {
    api("us.ihmc:ihmc-commons:0.26.6")
    api("us.ihmc:ihmc-robot-description:0.14.1")
    api("us.ihmc:ihmc-graphics-description:0.14.1")
-   api("us.ihmc:ihmc-javafx-toolkit:0.14.1")
+   api("us.ihmc:ihmc-javafx-toolkit:0.14.1") {
+      exclude(group = "org.slf4j", module = "slf4j-simple")
+   }
    api("us.ihmc:ihmc-robotics-toolkit:source")
 }
 
