--- a/ihmc-path-planning/gradle.properties
+++ b/ihmc-path-planning/gradle.properties
@@ -1,6 +1,6 @@
 kebabCasedName = ihmc-path-planning
 pascalCasedName = IHMCPathPlanning
-extraSourceSets = ["test", "visualizers", "data-sets"]
+extraSourceSets = ["test", "visualizers", "datasets"]
 publishUrl = local
 compositeSearchHeight = 2
 excludeFromCompositeBuild = false
