--- a/ihmc-robot-data-visualizer/build.gradle
+++ b/ihmc-robot-data-visualizer/build.gradle
@@ -25,7 +25,9 @@ mainDependencies {
    api("us.ihmc:ihmc-video-codecs:2.1.5")
    api("us.ihmc:ihmc-commons:0.26.6")
    api("us.ihmc:simulation-construction-set:0.14.0")
-   api("us.ihmc:ihmc-javafx-toolkit:0.14.1")
+   api("us.ihmc:ihmc-javafx-toolkit:0.14.1") {
+      exclude(group = "org.slf4j", module = "slf4j-simple")
+   }
    api("us.ihmc:ihmc-graphics-description:0.14.1")
    api("us.ihmc:ihmc-robot-description:0.14.1")
    api("us.ihmc:ihmc-model-file-loader:source")
