--- a/ihmc-parameter-tuner/build.gradle
+++ b/ihmc-parameter-tuner/build.gradle
@@ -19,6 +19,12 @@ mainDependencies {
    api("us.ihmc:ihmc-commons:0.26.6")
    api("us.ihmc:ihmc-yovariables:0.4.0")
    api("us.ihmc:ihmc-javafx-toolkit:0.14.1")
+   def javaFXVersion = "11.0.2"
+   api(ihmc.javaFXModule("base", javaFXVersion))
+   api(ihmc.javaFXModule("controls", javaFXVersion))
+   api(ihmc.javaFXModule("graphics", javaFXVersion))
+   api(ihmc.javaFXModule("fxml", javaFXVersion))
+   api(ihmc.javaFXModule("swing", javaFXVersion))
    api("us.ihmc:ihmc-robot-data-logger:0.15.0")
    api("us.ihmc:ihmc-robotics-toolkit:source")
 }
